--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
 
     <div class="tasks-container"></div>
 
-    <script src="./index.js"></script>
+    <script type="module" src="./index.js"></script>
 </body>
 </html>
