--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <button id="btn-task-save">Save</button>
     </form>
 
-    <div class="tasks-container"></div>
+    <div id="tasks-container"></div>
 
     <script type="module" src="./index.js"></script>
 </body>
